Alignment fix for table

--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ p.normal {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
+    width: 68%;
   }
   h3{
     text-align:center
